--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style id="themeStyle"></style>
 
   <link rel="shortcut icon" href="docs/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="docs/favicon-bak.ico" type="image/x-icon">
+  <link rel="icon" href="docs/favicon.ico" type="image/x-icon">
 
   <!--[if lt IE 9]>
     <script src="dist/lib/ieonly/html5shiv.js"></script>
