--- a/index.html
+++ b/index.html
@@ -124,7 +124,16 @@
 <div id="grid" class="scrollbar-hover">
   <div class="container">
     <div class="row">
-      <div class="col col-md-d5 col-sm-6">
+      <div class="col">
+        <div class="chapter" id="chapter-springboot" data-id="springboot">
+          <div class="chapter-heading fade scale show">
+            <h4><i class="icon icon-book"></i> <span class='name'>SpringBoot</span></h4>
+          </div>
+          <div class="chapter-body" id="sections-springboot">
+          </div>
+        </div>
+      </div>
+      <div class="col hidden">
         <div class="chapter" id="chapter-basic" data-id="basic">
           <div class="chapter-heading fade scale show">
             <h4><i class="icon icon-book"></i> <span class='name'>基础</span></h4>
@@ -133,7 +142,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-d5 col-sm-6">
+      <div class="col hidden">
         <div class="chapter" id="chapter-control" data-id="control">
           <div class="chapter-heading fade scale show">
             <h4><i class="icon icon-check-empty"></i> <span class='name'>控件</span></h4>
@@ -142,7 +151,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-d5 col-sm-6">
+      <div class="col hidden">
         <div class="chapter" id="chapter-component" data-id="component">
           <div class="chapter-heading fade scale show">
             <h4><i class="icon icon-columns"></i> <span class='name'>组件</span></h4>
@@ -151,7 +160,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-d5 col-sm-6">
+      <div class="col hidden">
         <div class="chapter" id="chapter-javascript" data-id="javascript">
           <div class="chapter-heading fade scale show">
             <h4><i class="icon icon-magic"></i> <span class='name'>JS插件</span></h4>
@@ -160,7 +169,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-d5 col-sm-6">
+      <div class="col hidden">
         <div class="chapter" id="chapter-view" data-id="view">
           <div class="chapter-heading fade scale show">
             <h4><i class="icon icon-list-alt"></i> <span class='name'>视图</span></h4>
@@ -170,7 +179,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row hidden">
       <div class="col col-md-3 col-sm-6">
         <div class="chapter" id="chapter-learn" data-id="learn">
           <div class="chapter-heading fade scale show">
@@ -180,7 +189,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-3 col-sm-6">
+      <div class="col col-md-3 col-sm-6 hidden">
         <div class="chapter" id="chapter-promotion" data-id="promotion">
           <div class="chapter-heading fade scale show">
             <h4><i class="icon icon-diamond"></i> <span class='name'>推荐</span></h4>
@@ -189,7 +198,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-3 col-sm-6">
+      <div class="col col-md-3 col-sm-6 hidden">
         <div class="chapter" id="chapter-resource" data-id="resource">
           <div class="chapter-heading fade scale show">
             <h4><i class="icon icon-coffee"></i> <span class='name'>更多资源</span></h4>
@@ -198,7 +207,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-3 col-sm-6">
+      <div class="col col-md-3 col-sm-6 hidden">
         <div class="chapter" id="chapter-contribution" data-id="contribution">
           <div class="chapter-heading fade scale show">
             <h4><i class="icon icon-heart"></i> <span class='name'>贡献</span></h4>
